# espn-openapi

./: .gitignore  CHECKLIST.md  CHECKLIST_CONDENSED.md  CLAUDE.md  CONFERENCE_IDS.md  MEMORY.md  Makefile  PATTERNS.md  PYTEST_CONVERSION.md  README.md  TESTING.md  convert_tests_to_pytest.py  explorer.html  game_summary_response.json  mcp_requirements.txt  mcp_server.py  mlb_team_details_response_processed.json  nfl_scoreboard_direct.json  nfl_scoreboard_response_processed.json  nfl_team_details_response_processed.json  pyproject.toml  pytest.ini  qb_correlations_2023.json  requirements.txt  spec-cdn.yaml  spec-fantasy.yaml  spec-partners-api.yaml  spec-site-api.yaml  spec-site-web-api.yaml  spec-sports-core-api.yaml  spec.yaml  spec.yaml.bak  test-team-details.py
.claude/: settings.local.json
.claude-trace/: log-2025-06-03-02-12-08.html  log-2025-06-03-02-12-08.jsonl
json_output/: athlete_2330_splits_processed.json  athlete_3139477_gamelog.json  athlete_3139477_gamelog_processed.json  athlete_4430191_overview_processed.json  athlete_4430191_overview_raw.json  athlete_4430191_profile_processed.json  athlete_4430191_profile_raw.json  athlete_4430191_splits.json  athlete_baseball_mlb_6514_details_processed.json  athlete_basketball_nba_4011_details_processed.json  athlete_bio_mlb_33912.json  athlete_bio_nba_1966.json  athlete_bio_nhl_3024816.json  athlete_contract_nba_1966_2024.json  athlete_contract_nba_lebron_2024.json  athlete_contracts_nba_1966.json  athlete_contracts_nba_lebron.json  athlete_contracts_nba_wembanyama.json  athlete_details_baseball_mlb_33912.json  (+620 more)
(+1552 files in other folders)
