[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espn-api"
version = "0.1.0"
description = "Python client for ESPN APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ESPN API Team" }
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.0",
    "httpx>=0.24.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["models"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "openapi-python-client>=0.15.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"